--- a/src/views/templates/header.ejs
+++ b/src/views/templates/header.ejs
@@ -12,6 +12,167 @@
 
 <body>
 
+    <div class="mob-nav">
+        <ul class="mob-nav__main">
+            <li class="mob-nav__main-item">
+                <a href="#" class="mob-nav__main-link">О компании</a>
+            </li>
+            <li class="mob-nav__main-item">
+                <a href="#" class="mob-nav__main-link">Отзывы</a>
+            </li>
+            <li class="mob-nav__main-item">
+                <a href="#" class="mob-nav__main-link">Блог</a>
+            </li>
+            <li class="mob-nav__main-item">
+                <a href="#" class="mob-nav__main-link">Контакты</a>
+            </li>
+        </ul>
+        <ul class="mob-nav__list">
+            <li class="mob-nav__list-item">
+                <div class="mob-nav__list-wrapper">
+                    <a href="" class="mob-nav__list-link">
+                        Лицензирование
+                    </a>
+                    <div class="mob-nav__list-open">
+                        <svg width="8" height="14" viewBox="0 0 16 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M0.885945 13.117L13.5708 0.504529C13.9864 0.0915385 14.6593 0.0922328 15.0742 0.506665C15.4888 0.921044 15.4877 1.59231 15.072 2.00562L3.14223 13.8674L15.0725 25.7291C15.4881 26.1425 15.4891 26.8133 15.0746 27.2278C14.8666 27.4355 14.5941 27.5394 14.3216 27.5394C14.0499 27.5394 13.7785 27.4362 13.5708 27.2299L0.885945 14.6178C0.685776 14.4192 0.573451 14.149 0.573451 13.8674C0.573451 13.5858 0.686097 13.3159 0.885945 13.117Z" fill="#2A2C31"/>
+                        </svg>                            
+                    </div>
+                </div>
+                <ul class="mob-nav__list-sublist mob-nav__sublist">
+                    <li class="mob-nav__sublist-item">
+                        <a href="#" class="mob-nav__sublist-link">
+                            Лицензирование Сопровождение в получении Лицензии <br>
+                            Лицензия ФСТЭК
+                        </a>
+                    </li>
+                    <li class="mob-nav__sublist-item">
+                        <a href="#" class="mob-nav__sublist-link">
+                            Лицензирование Сопровождение в получении Лицензии <br>
+                            Лицензия ФСТЭК
+                        </a>
+                    </li>
+                    <li class="mob-nav__sublist-item">
+                        <a href="#" class="mob-nav__sublist-link">
+                            Лицензирование Сопровождение в получении Лицензии <br>
+                            Лицензия ФСТЭК
+                        </a>
+                        <ul class="mob-nav__sublist-sublist mob-nav__subsublist">
+                            <li class="mob-nav__subsublist-item">
+                                <a href="#" class="mob-nav__subsublist-link">
+                                    Сопровождение Вашей фирмы в сфере <br>
+                                    охраны труда и промышленной безопасности
+                                </a>
+                            </li>
+                            <li class="mob-nav__subsublist-item">
+                                <a href="#" class="mob-nav__subsublist-link">
+                                    Сопровождение Вашей фирмы в сфере <br>
+                                    охраны труда и промышленной безопасности
+                                </a>
+                            </li>
+                            <li class="mob-nav__subsublist-item">
+                                <a href="#" class="mob-nav__subsublist-link">
+                                    Сопровождение Вашей фирмы в сфере <br>
+                                    охраны труда и промышленной безопасности
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="mob-nav__sublist-item">
+                        <a href="#" class="mob-nav__sublist-link">
+                            Лицензирование Сопровождение в получении Лицензии <br>
+                            Лицензия ФСТЭК
+                        </a>
+                    </li>
+                    <li class="mob-nav__sublist-item">
+                        <a href="#" class="mob-nav__sublist-link">
+                            Лицензирование Сопровождение в получении Лицензии <br>
+                            Лицензия ФСТЭК
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="mob-nav__list-item">
+                <div class="mob-nav__list-wrapper">
+                    <a href="" class="mob-nav__list-link">
+                        Лицензирование
+                    </a>
+                </div>
+            </li>
+            <li class="mob-nav__list-item">
+                <div class="mob-nav__list-wrapper">
+                    <a href="" class="mob-nav__list-link">
+                        Лицензирование
+                    </a>
+                    <div class="mob-nav__list-open">
+                        <svg width="8" height="14" viewBox="0 0 16 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M0.885945 13.117L13.5708 0.504529C13.9864 0.0915385 14.6593 0.0922328 15.0742 0.506665C15.4888 0.921044 15.4877 1.59231 15.072 2.00562L3.14223 13.8674L15.0725 25.7291C15.4881 26.1425 15.4891 26.8133 15.0746 27.2278C14.8666 27.4355 14.5941 27.5394 14.3216 27.5394C14.0499 27.5394 13.7785 27.4362 13.5708 27.2299L0.885945 14.6178C0.685776 14.4192 0.573451 14.149 0.573451 13.8674C0.573451 13.5858 0.686097 13.3159 0.885945 13.117Z" fill="#2A2C31"/>
+                        </svg>                            
+                    </div>
+                </div>
+                <ul class="mob-nav__list-sublist mob-nav__sublist">
+                    <li class="mob-nav__sublist-item">
+                        <a href="#" class="mob-nav__sublist-link">
+                            Лицензирование Сопровождение в получении Лицензии <br>
+                            Лицензия ФСТЭК
+                        </a>
+                    </li>
+                    <li class="mob-nav__sublist-item">
+                        <a href="#" class="mob-nav__sublist-link">
+                            Лицензирование Сопровождение в получении Лицензии <br>
+                            Лицензия ФСТЭК
+                        </a>
+                    </li>
+                    <li class="mob-nav__sublist-item">
+                        <a href="#" class="mob-nav__sublist-link">
+                            Лицензирование Сопровождение в получении Лицензии <br>
+                            Лицензия ФСТЭК
+                        </a>
+                        <ul class="mob-nav__sublist-sublist mob-nav__subsublist">
+                            <li class="mob-nav__subsublist-item">
+                                <a href="#" class="mob-nav__subsublist-link">
+                                    Сопровождение Вашей фирмы в сфере <br>
+                                    охраны труда и промышленной безопасности
+                                </a>
+                            </li>
+                            <li class="mob-nav__subsublist-item">
+                                <a href="#" class="mob-nav__subsublist-link">
+                                    Сопровождение Вашей фирмы в сфере <br>
+                                    охраны труда и промышленной безопасности
+                                </a>
+                            </li>
+                            <li class="mob-nav__subsublist-item">
+                                <a href="#" class="mob-nav__subsublist-link">
+                                    Сопровождение Вашей фирмы в сфере <br>
+                                    охраны труда и промышленной безопасности
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="mob-nav__sublist-item">
+                        <a href="#" class="mob-nav__sublist-link">
+                            Лицензирование Сопровождение в получении Лицензии <br>
+                            Лицензия ФСТЭК
+                        </a>
+                    </li>
+                    <li class="mob-nav__sublist-item">
+                        <a href="#" class="mob-nav__sublist-link">
+                            Лицензирование Сопровождение в получении Лицензии <br>
+                            Лицензия ФСТЭК
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="mob-nav__list-item">
+                <div class="mob-nav__list-wrapper">
+                    <a href="" class="mob-nav__list-link">
+                        Лицензирование
+                    </a>
+                </div>
+            </li>
+        </ul>
+    </div>
+
     <header class="header">
         <div class="container">
             <div class="header__row">
@@ -61,6 +222,9 @@
                     <div class="header__contacts-timework">
                         Ежедневно с 09:00 до 21:00
                     </div>
+                </div>
+                <div class="header__burger">
+                    <span></span><span></span><span></span>
                 </div>
             </div>
         </div>
